<resources>
    <string name="app_name">Score Keeper</string>
    <string name="hint_enter_first_name">Enter Name 1</string>
    <string name="hint_enter_second_name">Enter Name 2</string>
    <string name="_0">0</string>
    <string name="fault">Fault</string>
    <string name="_add_4_points_to_opponent">+4 pts to opponent</string>
    <string name="add_5_points_to_opponent">+5 pts to opponent</string>
    <string name="add_6_points_to_opponent">+6 pts to opponent</string>
    <string name="add_7_points_to_opponent">+7 pts to opponent</string>
    <string name="reset">Reset</string>
</resources>
